--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,31 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-image: url(./assets/media/pexels-vanessa-loring-5971874.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 60vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.title {
+  display: inherit;
+  background-color: #cba352;
+  padding: 1.2%;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.title h3 {
+  margin: unset;
 }
 
 @keyframes App-logo-spin {
