--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -3,7 +3,7 @@
     margin: 20px;
     height: 50%;
     width: auto;
-    border-bottom: 3px solid;
+    border-bottom: 3px solid white;
 }
 
 .filter-button {
@@ -11,7 +11,7 @@
     background-color: transparent;
     height: 50px;
     width: 100px;
-    color: black;
+    color: white;
     font-size: 1em;
     border: unset;
     margin: auto;
@@ -19,5 +19,5 @@
 }
 
 .filter-button:hover {
-    color: #414142;
+    color: gainsboro;
 }
