--- a/src/components/Filters.css
+++ b/src/components/Filters.css
@@ -3,21 +3,48 @@
     margin: 20px;
     height: 50%;
     width: auto;
-    border-bottom: 3px solid white;
 }
 
 .filter-button {
+    display: block;
     cursor: pointer;
     background-color: transparent;
     height: 50px;
-    width: 100px;
+    width: 200px;
     color: white;
     font-size: 1em;
     border: unset;
     margin: auto;
     font-weight: 800;
+    border-bottom: 3px solid white;
 }
 
 .filter-button:hover {
     color: gainsboro;
+    border-color: gainsboro;
+}
+
+.active-button {
+    cursor: pointer;
+    background-color: transparent;
+    height: 50px;
+    width: 200px;
+    color: yellow;
+    font-size: 1em;
+    border: unset;
+    margin: auto;
+    font-weight: 800;
+    border-bottom: 3px solid yellow;
+}
+
+#best-match {
+    margin-right: 0px;
+}
+
+#rating {
+    margin: 0px;
+}
+
+#review_count {
+    margin-left: 0px;
 }
